Текстовка на стартовой странице

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
         <body>
             <div class="greeting">
                 <h1>Сервис музыкальных рекомендаций</h1>
-                <p>Учебный проект 2-го семестра курса "Веб-разработка на Python"</p>
+                <p>Учебный проект 2-го семестра курса "Программирование на Python"</p>
 		<p>Разработка REST-сервиса с использованием FastAPI</p>
             </div>
             <a href="http://127.0.0.1:80/docs" class="swagger-link">Перейдите в SwaggerUI по ссылке 127.0.0.1:80/docs</a>
